# SomBot

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  messages.html  pyproject.toml  test.py
alembic/: env.py
app/: __init__.py  main.py
app/admin/: __init__.py  commands.py  filters.py
app/core/: __init__.py  bot.py  config.py  db.py  logging.py  redis.py
app/fsm/: __init__.py  aml.py  lead.py
app/handlers/: __init__.py  aml.py  fallback.py  help.py  leads.py  menu.py  rates.py  start.py
app/keyboards/: __init__.py  aml.py  common.py  lead.py  main_menu.py  rates.py  rates.py.tmp
app/middlewares/: __init__.py  rate_limit.py
app/rates/: __init__.py  models.py  service.py
app/rates/providers/: __init__.py  base.py  bybit.py  grinex.py  rapira.py
app/services/: __init__.py
app/services/aml/: __init__.py  providers.py  service.py
app/services/leads/: __init__.py  service.py
app/texts/: ru.yml
app/utils/: formatting.py  main_photo.py  telegram.py  texts.py
assets/: README.md
deploy/docker/bot/: Dockerfile
deploy/docker/pred/: Dockerfile
deploy/docker/worker/: Dockerfile
pred/: __init__.py  main.py
pred/handlers/: __init__.py  admin.py  predict.py  start.py
pred/keyboards/: __init__.py  cta.py
pred/services/: __init__.py  phrases.py  scheduler.py
worker/: __init__.py  main.py
worker/prediction/: __init__.py
worker/tasks/: __init__.py
